# Blockwars24

./: AGENTS.md  AdjustPowerValuePage.qml  Block.qml  BlockExplodeParticle.qml  BlockLaunchParticle.qml  BlockPool.qml  CMakeLists.txt  ChoosePowerupsModal.qml  CreatePowerupPage.qml  DashboardGridElement.qml  DashboardPlayerHealthHUD.qml  DashboardPlayerPowerupSidebar.qml  DefaultPowerupRepository.qml  EditPowerupListPage.qml  GameGridElement.qml  Main.qml  MainMenup.qml  MatchDashboardLink.qml  MessageArea.qml  PlaceholderPage.qml  PowerupBlockSelectionGrid.qml  PowerupCard.qml  PowerupCatalog.qml  PowerupCollectionController.qml  PowerupDataStore.qml  PowerupEditorMainPage.qml  PowerupEditorScene.qml  PowerupEditorStore.qml  PowerupEnergyModel.qml  PowerupGridBlock.qml  PowerupLoadoutCard.qml  PowerupLoadoutHelper.qml  README.md  SelectBlocksPage.qml  SelectPowerupGameScene.qml  SinglePlayerGameScene.qml  SinglePlayerMatchDashboard.qml  SinglePlayerMatchGrid.qml  SinglePlayerMatchPowerupCard.qml  SinglePlayerMatchScene.qml  (+7 more)
MainMenu/: MainMenuPage.qml
PowerupEditor/: CreatePowerupBlockStep.qml  CreatePowerupFlow.qml  CreatePowerupOverviewStep.qml  PowerupEditorScene.qml  PowerupLibraryPage.qml  PowerupLibraryView.qml
Shared/: DefaultPowerupRepository.qml  PlaceholderPage.qml  PowerupDataStore.qml  PowerupEnergyModel.qml  PowerupRepository.qml
SinglePlayer/: PlayerPowerupLoadoutStore.qml  SinglePlayerMatchScene.qml  SinglePlayerSelectPowerupsScene.qml
SinglePlayer/components/: MatchDashboard.qml  MatchGridView.qml  MatchMomentumBar.qml  PowerupChargeMeter.qml  PowerupColumn.qml  PowerupSelectionModal.qml  ReadyForMatchButton.qml  SelectPowerupSlot.qml
SinglePlayer/controllers/: CpuPlayerController.qml  HumanPlayerController.qml
SinglePlayer/grid/: Block.qml  BlockAnimationStateMachine.qml  GameGridElement.qml
include/: AbstractGameElement.h  GameDataObject.h  GameElementsStore.h  GameScene.h  GameSignal.h
src/: AbstractGameElement.cpp  GameDataObject.cpp  GameElementsStore.cpp  GameScene.cpp  GameSignal.cpp  abstractgameelement.cpp  abstractgameelement.h  gamedataobject.cpp  gamedataobject.h  gameelementstore.cpp  gameelementstore.h  gamegridorchestrator.cpp  gamegridorchestrator.h  gamescene.cpp  gamescene.h  gamesignal.cpp  gamesignal.h  gamespritesheetelement.cpp  gamespritesheetelement.h
